--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "bottleneck": "^2.19.5",
-    "fast-csv": "^3.7.0",
+    "fast-csv": "^4.3.6",
     "lodash": "^4.17.15",
+    "mongodb": "^3.6.5",
     "request": "^2.88.0",
     "request-promise": "^4.2.5"
   }
